--- a/public/index.html
+++ b/public/index.html
@@ -40,25 +40,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Bharat Kammakatla</title>
-    <meta name="title" content="Bharat Kammakatla">
-    <meta name="description" content="Test Automation Engineer 👨‍💻 | Data Science Enthusiast 📊 | Tech Writer ✍️ ">
-
-    <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://bharatkammakatla.com/">
-    <meta property="og:title" content="Bharat Kammakatla">
-    <meta property="og:description" content="Test Automation Engineer 👨‍💻 | Data Science Enthusiast 📊 | Tech Writer ✍️ ">
-    <!-- <meta property="og:image" content="https://bharatkammakatla.com/static/media/meta-pic.png"> -->
-    <meta property="og:image" content="https://avatars1.githubusercontent.com/u/28840761?v=4">
-
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://bharatkammakatla.com/">
-    <meta property="twitter:title" content="Bharat Kammakatla">
-    <meta property="twitter:description" content="Test Automation Engineer 👨‍💻 | Data Science Enthusiast 📊 | Tech Writer ✍️ ">
-    <!-- <meta property="twitter:image" content="https://bharatkammakatla.com/static/media/meta-pic.png"> -->
-    <meta property="twitter:image" content="https://avatars1.githubusercontent.com/u/28840761?v=4">
+    <title>Sean Stevens</title>
+    <meta name="title" content="Sean Stevens">
+    <meta name="description" content="Backend Engineer 👨‍💻 | Devops Practioner 👷 | AI Enthusiast ">
 
   </head>
   <body>
